update change language

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,4 @@
-{
+{"translation":{
     "Ltext01": "Login",
     "Ltext02": "Register",
     "User99": "Username",
@@ -98,4 +98,4 @@
     "Menu03": "Community",
     "Menu04": "Profile",
     "Menu05": "Admin"
-}
+}}
