--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -1,4 +1,4 @@
-{
+{"translation":{
     "Ltext01": "เข้าสู่ระบบ",
     "Ltext02": "สมัครสมาชิก",
     "User99": "ชื่อผู้ใช้งาน",
@@ -98,4 +98,4 @@
     "Menu03": "ชุมชน",
     "Menu04": "โปรไฟล์",
     "Menu05": "แอดมิน"
-}
+}}
