finish brew-new

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -51,7 +51,7 @@
     "Modaltext05": "Grinder",
     "Modaltext06": "Filter",
     "Modaltext07": "Other",
-    "Modaltext08": "Equipment name or detail",
+    "Modaltext08": "Description",
     "Modaltext09": "Select Process Step",
     "Modaltext10": "Enter Step Name",
     "Modaltext11": "Enter Water Amount",
