--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -51,7 +51,7 @@
     "Modaltext05": "เครื่องบด",
     "Modaltext06": "ตัวกรอง",
     "Modaltext07": "อื่นๆ",
-    "Modaltext08": "ชื่อหรือรายละเอียดอุปกรณ์",
+    "Modaltext08": "รายละเอียดอุปกรณ์",
     "Modaltext09": "เลือกรูปแบบขั้นตอน",
     "Modaltext10": "กรอกชื่อขั้นตอน",
     "Modaltext11": "กรอกปริมาณน้ำ",
