--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,8 +10,8 @@
     "Ltext09": "Sign In",
     "Ltext10": "Sign Out",
     "Ptext01": "Profile And Setting",
-    "Ptext02": "My brew count",
-    "Ptext03": "My brew recipe",
+    "Ptext02": "Coffee Made",
+    "Ptext03": "My Brew Recipe",
     "Ptext04": "My brew method",
     "Ptext05": "Sound",
     "Ptext06": "Language",
@@ -29,7 +29,7 @@
     "Btext02": "My Favorite Recipes",
     "Btext03": "No Favorite Recipe.",
     "Btext04": "Heart a recipe to see it here!",
-    "Btext05": " 's Recipes ",
+    "Btext05": "Coffee Recipes",
     "Btext06": "Recipe Details",
     "Btext07": "Details and Equipment",
     "Btext08": "Edit Recipe",
