--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -29,7 +29,7 @@
     "Btext02": "สูตรที่ฉันชื่อชอบ",
     "Btext03": "ยังไม่มีสูตรที่ชื่นชอบตอนนี้",
     "Btext04": "กดหัวใจให้กับสูตรที่คุณชอบเพื่อจะเห็นมันที่นี่!",
-    "Btext05": "สูตรการชงแบบ",
+    "Btext05": "สูตรการชงกาแฟ",
     "Btext06": "รายละเอียดสูตรการชง",
     "Btext07": "อุปกรณ์และรายละเอียด",
     "Btext08": "แก้ไขสูตรการชง",
