--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -91,10 +91,11 @@
     "Ctext07": "Sort by-Newest",
     "Ctext08": "Find new ideas from the community!",
     "Ctext09": "Find amazing coffee products here!",
-    "Ctext10": "You can leave a Review here!",
-    "Ctext11": "Post Review",
-    "Ctext12": "No Review yet.",
+    "Ctext10": "You can leave a Comment here!",
+    "Ctext11": "Post Comment",
+    "Ctext12": "No Comment yet.",
     "Ctext13": "Be the first to review!",
+    "Ctext14": "Description & Comment",
     "Menu01": "Coffee Article",
     "Menu02": "Brewing Guide",
     "Menu03": "Community",
