--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -95,6 +95,7 @@
     "Ctext11": "แสดงความคิดเห็น",
     "Ctext12": "ยังไม่มีความคิดเห็นใดๆ ณ ขณะนี้",
     "Ctext13": "เป็นคนแรกที่แสดงความเห็นซิ!",
+    "Ctext14": "คำอธิบายเเละคอมเมนต์",
     "Menu01": "บทความกาแฟ",
     "Menu02": "แนะนำการชงกาแฟ",
     "Menu03": "ชุมชน",
