--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -94,7 +94,7 @@
     "Ctext10": "You can leave a Comment here!",
     "Ctext11": "Post Comment",
     "Ctext12": "No Comment yet.",
-    "Ctext13": "Be the first to review!",
+    "Ctext13": "Be the first to Comment!",
     "Ctext14": "Description & Comment",
     "Menu01": "Coffee Article",
     "Menu02": "Brewing Guide",
