cache all files

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -110,6 +110,7 @@
     "Error05": "We did not find the page you are requesting",
     "Error06": "Back to Main Page",
     "Error07": "No results found",
-    "Error08": "Please try again"
+    "Error08": "Please try again",
+    "Timer01": "Brew Timer"
 }
 }
