--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -110,6 +110,7 @@
     "Error05": "เราไม่พบหน้าที่คุณร้องขอ",
     "Error06": "กลับไปที่หน้าหลัก",
     "Error07": "ไม่พบผลการค้นหา",
-    "Error08": "กรุณาลองใหม่อีกครั้ง"
+    "Error08": "กรุณาลองใหม่อีกครั้ง",
+    "Timer01": "ตัวคุมเวลา"
 }
 }
